--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div class="mind">
 
                 <div class="mind2">
-                    <a href="#"> <img class="inmind" src="images/WhatsApp Image 2021-09-01 at 9.26.28 AM.jpeg" alt="hob"></a>
+                    <a href="#"> <img class="inmind" src="images/صورتي.jpg" alt="hob"></a>
                     <input type="text" placeholder="What is in your mind Abdulrahman?">
                 </div>
 
